# galc

./: .clangTest.yml  .cppcheckTest.yml  .debianTest.yml  .tm_project.cache  .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac  galc.appdata.xml.in  galc.desktop.in  galc.spec.in
.tx/: config
doc/: Makefile.am  galc.1
pixmaps/: Makefile.am  galc.xpm
po/: POTFILES.in  POTFILES.skip  README.Translation  am.po  ar.po  be.po  bg.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  es_MX.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  mr.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  (+5 more)
src/: Makefile.am  calc_basic.c  calc_basic.h  callbacks.c  callbacks.h  config_file.c  config_file.h  display.c  display.h  flex_parser.h  flex_parser.l  g_real.h  galc.h  general_functions.c  general_functions.h  main.c  math_functions.c  math_functions.h  ui.c  ui.h
ui/: Makefile.am  about.ui.in  main_frame.ui  prefs-ume.ui  prefs_gtk2.ui  prefs_gtk3.ui
