## Process this file with automake to produce Makefile.in

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = galc.xpm

# install icons to locations specified by xdg icon theme spec.
icontheme_scalabledir = $(datadir)/icons/hicolor/scalable/apps
icontheme_scalable_DATA = galc.svg

icontheme_48x48dir = $(datadir)/icons/hicolor/48x48/apps
icontheme_48x48_DATA = galc.png

EXTRA_DIST = $(pixmaps_DATA) \
	$(icontheme_scalable_DATA) \
	$(icontheme_48x48_DATA)


